--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,38 +11,39 @@
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_centerInParent="true">
+    >
         <Button
                 android:text="Добавить пользователя"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/activity_main_button_user_reg"
-                android:layout_marginTop="132dp"
+                android:layout_marginTop="136dp"
                 app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="8dp"
                 app:layout_constraintHorizontal_bias="0.497"/>
         <Button
-                android:text="Добавить работу"
+                android:text="Запись на ремонт"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/activity_main_button_add_service"
+                android:layout_height="wrap_content" android:id="@+id/activity_main_button_records"
                 app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="36dp"
-                app:layout_constraintTop_toBottomOf="@+id/activity_main_button_user_reg"
-                app:layout_constraintHorizontal_bias="0.497"/>
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+                app:layout_constraintHorizontal_bias="0.497" android:layout_marginTop="60dp"
+                app:layout_constraintTop_toBottomOf="@+id/activity_main_button_user_list"/>
         <Button
-                android:text="Посмотреть список работ"
+                android:text="Администратор"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/activity_main_button_services_list"
+                android:layout_height="wrap_content" android:id="@+id/activity_main_button_admin"
                 app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="52dp"
-                app:layout_constraintTop_toBottomOf="@+id/activity_main_button_add_service"/>
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="92dp"
+                app:layout_constraintTop_toBottomOf="@+id/activity_main_button_records"
+        />
         <Button
                 android:text="Список пользователей"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/activity_main_button_user_list"
                 app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                 app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-                android:layout_marginTop="28dp"
-                app:layout_constraintTop_toBottomOf="@+id/activity_main_button_services_list"/>
+                app:layout_constraintHorizontal_bias="0.497" android:layout_marginTop="56dp"
+                app:layout_constraintTop_toBottomOf="@+id/activity_main_button_user_reg"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </RelativeLayout>
