--- a/app/src/main/res/layout/fragment_record_add.xml
+++ b/app/src/main/res/layout/fragment_record_add.xml
@@ -34,7 +34,7 @@
         <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:inputType="textMultiLine"
+                android:inputType="text"
                 android:ems="10"
                 android:id="@+id/fragment_record_add_car" android:layout_marginTop="32dp"
                 app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginStart="12dp"
@@ -42,7 +42,7 @@
         <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:inputType="textMultiLine"
+                android:inputType="text"
                 android:ems="10"
                 android:id="@+id/fragment_record_add_client"
                 android:layout_marginStart="12dp"
@@ -62,7 +62,7 @@
         <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:inputType="textMultiLine"
+                android:inputType="text"
                 android:ems="10"
                 android:id="@+id/fragment_record_add_comment"
                 android:layout_marginStart="12dp"
