--- a/app/src/main/res/layout/admin_order_item.xml
+++ b/app/src/main/res/layout/admin_order_item.xml
@@ -45,10 +45,9 @@
                 android:text="TextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/admin_order_item_work"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/admin_order_item_price"
                 app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/admin_order_item_date"/>
         <Space
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
